Fixed pagination scrollbar issue

--- a/frontend/src/components/components.scss
+++ b/frontend/src/components/components.scss
@@ -332,6 +332,13 @@ header {
 }
 
 // h1 Pagination
+
+.previous::-webkit-scrollbar,
+.next::-webkit-scrollbar,
+.break::-webkit-scrollbar {
+	display: none;
+}
+
 .pagination-container {
 	display: flex;
 	justify-content: space-between;
